- Added capability to add IoFilters to RTMPConnection per application
- Added AAC live streaming code based on Wittawas Nakkasem's IceSurf code
- Created plug-in / server module system
- Created ICY / NSV streaming plug-in
- Created Authentication plug-in supporting FMS and Red5 authentication routines
- Created Administration plug-in based on the admin demo

Bugfixes:
- Fixed bug with recording, where meta files were not removed when using the same name
- Changed VideoCodecFactory into a "true" factory class
- Applied patch for h.264 live stream packet handling from Dave Feltenberger
- Applied FP 10.0.32.18 patch from Ari-Pekka Viitanen
- Fixed #652 Mistake in RTMPT Configuration lines in red5-core.xml
- Fixed #635 Bug SocketPolicyHandler.java with loading global flashpolicy.xml file
- Fixed #651 RTMPMinaTransport throws exception if isEnableMinaMonitor is true
- Fixed security policy for red5; Java Security Manager may now be used
- Fixed #653 Missing license headers
- Fixed #654 ContextLoggingListener for Logback 0.9.17
- Fixed #631 Memory leak using IServiceCapableConnection.invoke
- Fixed #638 Flash Lite 3.0 conneting with RED5 (invalid)

Red5 0.8.0 (2009-06-04)
-----------------------
New Features:
- Use ExtendedPropertyPlaceholderConfigurer for Spring placeholderConfig bean
  (APPSERVER-333; Patch from Michael Guymon)
- Updated Mina to 2.0.0-M6
- Multiple socket binding on single RTMP transports
- Context duplication on each Catalina host

Bugfixes:
- Red5 War Version Does not Shutdown Gracefully (APPSERVER-325; patch from
  Gordon Hempton).
- Scope Memory Leak (APPSERVER-347; patch from Gordon Hempton)
- AMF3 uses Maps for references (CODECS-13; patch from Peter Rendl)
- src/org/red5/io/flv/meta/MetaService.java use Jetty log instead of slf4j
  (APPSERVER-318; patch from Damien Raude-Morvan)
- References are stored too late when deserializing AMF3 arrays (CODECS-12;
  patch from Peter Rendl).
- ConversionUtils fail to convert to primitive arrays (CODECS-14;